src/styles/main.module.css
.card-text {
    font-size: 1.3rem; 
    line-height: 1.3; 
  }
  
  @media (max-width: 768px) {
    .card-img {
      height: 300px; 
      object-fit: none;
    }
  
    .card-text {
      font-size: 1.2rem; 
      
    }

  }
  

